# numboxkeyboard

./: ButtonDlg.qml  ButtonKey.qml  CMakeLists.txt  LICENSE.md  NumBoxKeyboard.qml  README.md  example.pro  main.cpp  main.qml  qml.qrc
example/NumKeyboardUse/: main.qml  qml.qrc
example/NumKeyboardUse/components/: ButtonD.qml  ButtonKey.qml  Clipboard.qml  NumBoxKeyboard.qml
